# py-template-repo

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  watchers.xml
.github/workflows/: pr_test_lint_actions.yml
webapp/: pytest.ini
webapp/config/settings/: base.py  local.py  prod.py  test.py
